--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.5",
     "@tiptap/core": "^2.2.3",
     "@tiptap/extension-image": "^2.2.3",
     "@tiptap/extension-link": "^2.2.3",
