--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} seed.ts"
   },
   "dependencies": {
+    "@clerk/clerk-react": "^4.30.6",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
